@@ -237,18 +237,24 @@ void SobolSimulationAlgorithm::run()
       }
     }
 
+    Distribution firstOrderIndicesDistribution;
     if (allNormalFO)
-      result_.setFirstOrderIndicesDistribution(Normal(meanFO, stddevFO, CorrelationMatrix(dimension)));
+      firstOrderIndicesDistribution = Normal(meanFO, stddevFO, CorrelationMatrix(dimension));
     else
-      result_.setFirstOrderIndicesDistribution(ComposedDistribution(marginalsFO));
+      firstOrderIndicesDistribution = ComposedDistribution(marginalsFO);
+    firstOrderIndicesDistribution.setDescription(distribution_.getDescription());
+    result_.setFirstOrderIndicesDistribution(firstOrderIndicesDistribution);
 
+    Distribution totalOrderIndicesDistribution;
     if (allNormalTO)
-      result_.setTotalOrderIndicesDistribution(Normal(meanTO, stddevTO, CorrelationMatrix(dimension)));
+      totalOrderIndicesDistribution = Normal(meanTO, stddevTO, CorrelationMatrix(dimension));
     else
-      result_.setTotalOrderIndicesDistribution(ComposedDistribution(marginalsTO));
+      totalOrderIndicesDistribution = ComposedDistribution(marginalsTO);
+    totalOrderIndicesDistribution.setDescription(distribution_.getDescription());
+    result_.setTotalOrderIndicesDistribution(totalOrderIndicesDistribution);
 
     result_.setOuterSampling(outerSampling);
-    LOGINFO(OSS() << "SobolSimulationAlgorithm::run: FO=" << result_.getFirstOrderIndicesDistribution());
+    LOGINFO(OSS() << "SobolSimulationAlgorithm::run: FO=" << firstOrderIndicesDistribution);
 
     // Display the result at each outer sample
     if (getVerbose()) LOGINFO(result_.__repr__());
@@ -256,8 +262,8 @@ void SobolSimulationAlgorithm::run()
     Bool converged = true;
     for (UnsignedInteger j = 0; (j < dimension) && converged; ++ j)
     {
-      const Distribution distFO(result_.getFirstOrderIndicesDistribution().getMarginal(j));
-      const Distribution distTO(result_.getTotalOrderIndicesDistribution().getMarginal(j));
+      const Distribution distFO(firstOrderIndicesDistribution.getMarginal(j));
+      const Distribution distTO(totalOrderIndicesDistribution.getMarginal(j));
 
       // or, check if F and T confidence lengths are small enough
       const Scalar foConfidenceLength = distFO.computeScalarQuantile(indexQuantileLevel_ * 0.5, true) - distFO.computeScalarQuantile(indexQuantileLevel_ * 0.5);
